assets/less/styles.less
@font-face {
  font-family: citrix-sans;
  src: url(//s3.amazonaws.com/citrix-cdn/can.cdn/marketing/assets/fonts/citrix-sans/citrixsans-regular.woff);
}

body {
  .flex-display;

  font-family: citrix-sans;
  min-height: 100%;
  height: 100%;
}

.selected-item {
  background-color: rgba(158, 158, 158, 0.2);
}

.text-float-search {
  input {
    width:100%;
  }
}

.page-header {
  h1 {
    margin-top: 70px;
  }
}
.alert-info h4 {
  color: rgba(0, 0, 0, 0.6);
}

.flow-importing {
  .bill-of-materials {
    transform: translateY(-400px);
    -webkit-transform: translateY(-400px);
    min-height:350px;

    &.importing {
      -webkit-animation: 1s bounceOutDown ease;
      -ms-animation: 1s bounceOutDown ease;
      animation: 1s bounceOutDown ease;
    }

  }
}

.toast-container {
  width: 100%;
  position: absolute;
  md-toast {
    position: initial;
  }
}

.process-row-logo {
    height: 30px;
    width: 30px;
    margin: 0 30px;
    background-size: contain;
    background-repeat: no-repeat;
}

.process-row {
  font-size: 16px;
  .md-button{
    border: 0;
    width: 35px;

    &.stop-button {
      color: #AA2200;
    }

    &.btn-stopped {
      color: #AA2200;

      &:not([disabled]):hover,
      &:not([disabled]):focus {
        color: #AA2200;
        background-color: rgba(204,34,0, 0.2);
      }
    }

    &.start-button {
      color: #008800;
    }

    &.btn-playing {
      color: #008800;

      &:not([disabled]):hover,
      &:not([disabled]):focus {
        color: #008800;
        background-color: rgba(0,170,0,0.2);
      }
    }

    &.start-button.deploying {
      -webkit-animation-name: startPulse;
      -webkit-animation-duration: 2s;
      -webkit-animation-iteration-count: infinite;
      animation-name: startPulse;
      animation-duration: 2s;
      animation-iteration-count: infinite;
    }

    &.stop-button.stopping {
      -webkit-animation-name: stopPulse;
      -webkit-animation-duration: 2s;
      -webkit-animation-iteration-count: infinite;
      animation-name: stopPulse;
      animation-duration: 2s;
      animation-iteration-count: infinite;
    }
  }
}

.process-row-text {
  font-size: 18px;
}

.process-row-space {
  padding: 16px 0px;
}

.container-fluid #intercom-container .intercom-launcher {
  bottom: 10px;
  right: 10px;
  transition: 0.5s all;
  -webkit-transition: 0.5s all;
}

.profile-card {
  margin: 1em;

  .card-content {
    padding: 1em;
  }

  button.md-button {
    min-width: 4em;
  }
}

.graph-container {
  margin-top: 1em;
  align-items: flex-end;
  -webkit-align-items: flex-end;
}

